--- a/class2/1085.md
+++ b/class2/1085.md
@@ -35,3 +35,7 @@ min_index=min(a,b,c,d)
 print(min_index)
 ```
 ### 느낀점
+![KakaoTalk_20230216_183620971](https://user-images.githubusercontent.com/99310356/219326863-69835b24-77cb-4dfb-9f8e-a32902611e9b.jpg)
+
+위에 사진처럼 x축은 x축끼리 비교
+y축은 y축끼리 비교해서 풀었다.
