--- a/class2/2231.md
+++ b/class2/2231.md
@@ -32,5 +32,4 @@ answer=result[0]
 print(answer)
 ```
 ## 느낀점
-이문제를 풀면서 초반에 문제가 됬던 부분은 if문 예외 처리를 해주는데 있어서이다.
-if문을 넣기 전에는 test case는 문제 없이 나왔지만 만약 손님수가 호텔 높이랑 나누어 떨어지면 제대로 값이 안나와서 문제였다.
+이문제는 아무도것도 없을때 0을 return 해야줘야하는것을 깜빡해서 계속 오답이 나왔었다.
