--- a/class2/10972.md
+++ b/class2/10972.md
@@ -1,29 +1,76 @@
+## 문제
+1부터 N까지의 수로 이루어진 순열이 있다. 이때, 사전순으로 다음에 오는 순열을 구하는 프로그램을 작성하시오.
+
+사전 순으로 가장 앞서는 순열은 오름차순으로 이루어진 순열이고, 가장 마지막에 오는 순열은 내림차순으로 이루어진 순열이다.
+
+N = 3인 경우에 사전순으로 순열을 나열하면 다음과 같다.
+
+1, 2, 3
+1, 3, 2
+2, 1, 3
+2, 3, 1
+3, 1, 2
+3, 2, 1
+## 입력
+첫째 줄에 N(1 ≤ N ≤ 10,000)이 주어진다. 둘째 줄에 순열이 주어진다.
+
+## 출력
+첫째 줄에 입력으로 주어진 순열의 다음에 오는 순열을 출력한다. 만약, 사전순으로 마지막에 오는 순열인 경우에는 -1을 출력한다
+
+```python
+import sys
+
+N=int(sys.stdin.readline())
+perlist=sys.stdin.readline().rstrip()
+perlist=list(map(int,perlist.split(' ')))
+
+# 뒤에서 부터 탐색
+for i in range(N-1,0,-1):
+    # per[i]값이 per[i-1]값보다 클때
+    if perlist[i-1]<perlist[i]:
+        #다시 뒤에서부터 탐색
+        for j in range(N-1,0,-1):
+            # perlist[i-1] 보다 큰 가장큰 j찾기
+            if perlist[i-1]<perlist[j]:
+                #swap
+                perlist[i-1],perlist[j]=perlist[j],perlist[i-1]
+                perm=perlist[:i]+sorted(perlist[i:])
+                print(" ".join(map(str,perm)))
+                exit()
+print(-1)
+```
+
+## error
 ```python
 from itertools import permutations
 
 n=int(input())
 
 string=input()
-arr=string.split()
+arr=list(string.split())
 for i in range(len(arr)):
     arr[i]=int(arr[i])
 arr=tuple(arr)
 
-
+# print(arr)
 
 per=list(range(1,n+1))
 per_list=list(permutations(per,n))
 
-for i in per_list:
-    if i==arr:
-        result=per_list.index(i)
+for i in range(len(per_list)):
+    if per_list[i]==arr:
+        if i==len(per_list)-1:
+            print(-1)
+        else:
+            print(" ".join(map(str,per_list[i+1])))
+            break
 
 
-# print(result,len(per_list))
+print(result)
 
 if result==len(per_list)-1:
-    print(-1)
+    print(-1)5
 else:
     print(" ".join(map(str,per_list[result+1])))
-
 ```
+permutation library를 사용하였는데 시간초과가 떳다. 그래서 실제고 구현을 하였다.
